# MatPlotSet

./: README.md  core.py  demo.ipynb  setup.cfg
matplotset/: __init__.py  core.py
