[metadata]
name = MatPlotSet
version = 1.0.0
description = Package to plot sets using Matplotlib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BolunDai0216/MatPlotSet
author = Bolun Dai
author_email = bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    numpy>=1.22.3